feat(install): allow bash sourcing of the .env file
Note from an old-timer:
Adding `.env` to the tree is not common, and may yield security risks.
What is usually done is to git ignore `.env` and provide a `.env.dist`.

--- a/.env
+++ b/.env
@@ -1,17 +1,19 @@
-SITE_URL=http://localhost:8000
-DEFAULT_FROM_EMAIL=dont-answer@mieuxvoter.fr
-EMAIL_HOST=mail
-EMAIL_PORT=25
-DJANGO_DEBUG=on
-DJANGO_ALLOWED_HOSTS=localhost
-DJANGO_SECRET_KEY=
-MAX_NUM_GRADES=20
-LANGUAGE_AVAILABLE=['fr','en']
+# Sensitive Configuration
+# Copy this file to `.env.local` and fill `.env.local` with your own values.
+# The `export` statements allow bash sourcing of this file.
 
-EMAIL_BACKEND=
-EMAIL_HOST=
-EMAIL_USE_TLS=
-EMAIL_USE_SSL=
-EMAIL_PORT=
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+export SITE_URL=http://localhost:8000
+export DJANGO_DEBUG=on
+export DJANGO_ALLOWED_HOSTS=localhost
+export DJANGO_SECRET_KEY=
+export MAX_NUM_GRADES=20
+export LANGUAGE_AVAILABLE=['fr','en']
+
+export DEFAULT_FROM_EMAIL=dont-answer@mieuxvoter.fr
+export EMAIL_HOST=mail
+export EMAIL_PORT=25
+export EMAIL_BACKEND=
+export EMAIL_USE_TLS=
+export EMAIL_USE_SSL=
+export EMAIL_HOST_USER=
+export EMAIL_HOST_PASSWORD=
