doc(install): add contextual instructions on how to make a secret key

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@
 export SITE_URL=http://localhost:8000
 export DJANGO_DEBUG=on
 export DJANGO_ALLOWED_HOSTS=localhost
+# You can make a DJANGO_SECRET_KEY from python
+# >>> from django.core.management.utils import get_random_secret_key
+# >>> get_random_secret_key()
 export DJANGO_SECRET_KEY=
 export MAX_NUM_GRADES=20
 export LANGUAGE_AVAILABLE=['fr','en']
