--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-coverage>=4.5.1
 Django==3.0.3
 django-nose==1.4.6
 django-extensions==2.2.5
 django-cors-headers==3.2.1
 djangorestframework==3.11.0
-nose==1.3.7
+dataclasses==0.7
 psycopg2==2.8.4
+
+# Testing
+coverage>=4.5.1
+nose==1.3.7
