--- a/.env
+++ b/.env
@@ -1,16 +1,23 @@
-# Sensitive Configuration
+# General Configuration
 # Copy this file to `.env.local` and fill `.env.local` with your own values.
 # The `export` statements allow bash sourcing of this file.
 
 export SITE_URL=http://localhost:8000
 export DJANGO_DEBUG=on
 export DJANGO_ALLOWED_HOSTS=localhost
-# You can make a DJANGO_SECRET_KEY from python
+# You can make a DJANGO_SECRET_KEY from python (make sure you quote it)
 # >>> from django.core.management.utils import get_random_secret_key
 # >>> get_random_secret_key()
-export DJANGO_SECRET_KEY=
+export DJANGO_SECRET_KEY=""
 export MAX_NUM_GRADES=20
 export LANGUAGE_AVAILABLE=['fr','en']
+
+# Database configuration (PostgreSQL only)
+export DATABASE_HOST=db
+export DATABASE_PORT=5432
+export DATABASE_NAME=postgres
+export DATABASE_USER=postgres
+export DATABASE_PASS=
 
 export DEFAULT_FROM_EMAIL=dont-answer@mieuxvoter.fr
 export EMAIL_HOST=mail
