--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 export SITE_URL=http://localhost:8000
 export DJANGO_DEBUG=on
-export DJANGO_ALLOWED_HOSTS=localhost
+export DJANGO_ALLOWED_HOSTS=['localhost']
 # You can make a DJANGO_SECRET_KEY from python (make sure you quote it)
 # >>> from django.core.management.utils import get_random_secret_key
 # >>> get_random_secret_key()
