chore(consistency)!: use plural form since it is an array
BREAKING CHANGE: `LANGUAGE_AVAILABLE` -> `LANGUAGES_AVAILABLE`

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ export DJANGO_ALLOWED_HOSTS=['localhost']
 # >>> get_random_secret_key()
 export DJANGO_SECRET_KEY=""
 export MAX_NUM_GRADES=20
-export LANGUAGE_AVAILABLE=['fr','en']
+export LANGUAGES_AVAILABLE=['fr','en']
 
 # Database configuration (PostgreSQL only)
 export DATABASE_HOST=db
