config(features): don't show the clutter

--- a/.behaverc
+++ b/.behaverc
@@ -4,4 +4,18 @@
 ;logging_clear_handlers=yes
 ;logging_filter=-suds
 
+; We are not using the default path to leave room for unit tests?
 paths=tests/acceptance
+
+; Show all print() statements even if tests pass. (bugs! bugs!)
+;stderr_capture=False
+;stdout_capture=False
+
+; Skipped projects clutter the console when using tags such as :
+; $ python manage.py behave --tags=wip
+; You can add a tag to a feature by using its name as descriptor :
+; @wip
+; Feature: Working hard
+; [...]
+; You can also add tags to Scenarios !
+show_skipped=False
