--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 Django==3.0.3
-django-nose==1.4.6
 django-extensions==2.2.5
 django-cors-headers==3.2.1
 djangorestframework==3.11.0
 dataclasses==0.7
 psycopg2==2.8.4
 
-# Testing
-coverage>=4.5.1
+# Test Runners
 nose==1.3.7
+django-nose==1.4.6
 behave-django==1.3.0
+# Assertion library
+pyhamcrest==2.0.2
+# Test Metrics
+coverage>=4.5.1
+# Natural Language Processor for numbers
 text2num>=2.2.0
+# Markup language for humans
 PyYAML==5.3.1
