conf(features): Tweak behave some more.
Make sure when using print() in step defs to end it with a `\n`,
This is a pitfall of behave, I guess?

We can set the format to plain, using the --format plain CLI option,
since the `format = plain` in the `.behaverc` changes nothing.
When in plain format, there are no colors and our print() appears.
We tried behave 1.2.6 and 1.2.7-dev2.
This may well be solved by some tweaking.
Found out about `aloe`, and `pytest-bdd`.
This may well be solved by some experimenting.

--- a/.behaverc
+++ b/.behaverc
@@ -1,21 +1,20 @@
 [behave]
-; perhaps we want some of those?
-;format=plain
-;logging_clear_handlers=yes
-;logging_filter=-suds
+; We are not using the default path to leave room for unit tests ; also, apps.
+paths = tests/acceptance
 
-; We are not using the default path to leave room for unit tests?
-paths=tests/acceptance
+
+# What is going on?  Does this change anything for you? --format=plain works
+;format = plain
+
+; Perhaps we want some of those?
+;logging_clear_handlers = yes
+;logging_filter = -suds
 
 ; Show all print() statements even if tests pass. (bugs! bugs!)
-;stderr_capture=False
-;stdout_capture=False
+;stderr_capture = False
+stdout_capture = False
+;log_capture = False
 
-; Skipped projects clutter the console when using tags such as :
-; $ python manage.py behave --tags=wip
-; You can add a tag to a feature by using its name as descriptor :
-; @wip
-; Feature: Working hard
-; [...]
-; You can also add tags to Scenarios !
-show_skipped=False
+show_skipped = False
+show_snippets = False
+summary = True
