--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "tests/acceptance/features/fr_FR"]
+[submodule "features-fr_FR"]
 	path = tests/acceptance/features/fr_FR
 	url = https://git.mieuxvoter.fr/MieuxVoter/mvapi-features-fr.git
